After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697000 - prefs: Fix binding remaining grabbed after clearing all strokes
prefs: Fix binding remaining grabbed after clearing all strokes
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-31 21:40 UTC by Rui Matos
Modified: 2013-05-13 22:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
prefs: Fix binding remaining grabbed after clearing all strokes (2.57 KB, patch)
2013-03-31 21:40 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-03-31 21:40:13 UTC
Noticed while while working in the vicinity.
Comment 1 Rui Matos 2013-03-31 21:40:15 UTC
Created attachment 240259 [details] [review]
prefs: Fix binding remaining grabbed after clearing all strokes

If a binding is updated with a clear set of strokes (effectively
disabling it) we aren't signaling that the binding changed and thus
the previous strokes will continue to be grabbed.

This fixes that and tries to do a better effort at checking if the
binding changed or not.
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-03-31 21:55:11 UTC
Review of attachment 240259 [details] [review]:

Perhaps Florian considers this too big a cleanup for 3.8.1, but I'd like to see us changing key grabs directly when a keybinding changes rather than ungrabbing and regrabbing all key bindings across all windows globally.
Comment 3 Florian Müllner 2013-05-13 15:45:19 UTC
Review of attachment 240259 [details] [review]:

OK.
Comment 4 Rui Matos 2013-05-13 22:26:27 UTC
Attachment 240259 [details] pushed as 1627044 - prefs: Fix binding remaining grabbed after clearing all strokes